# learning-haskell-1

./: .gitignore  README.md  hs001.cabal  package.yaml  stack.yaml
app/: Launcher.hs  Main.hs
notebook/: hotebook00.txt  notebook.md  notebook02.md  reddit-response.txt  typeclasses.md
src/: Chapter01.hs  Chapter02.hs  Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  Chapter09.hs  Chapter09a.hs  Geometry.hs  HighOrder.hs  Lib.hs  Mod.hs  Playground.hs  Recursion.hs  Syntax.hs
