cabal-version:      2.4
name:               hs001
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexey Rykhalskiy
maintainer:         alexey.rykhalskiy@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Playground

    -- Modules included in this library but not exported.
    other-modules: Chapter01 Chapter02 Chapter03
    other-modules: Chapter04 Chapter05 Chapter06
    other-modules: Syntax Recursion HighOrder
    other-modules: Mod Geometry

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hs001
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hs001

    hs-source-dirs:   app
    default-language: Haskell2010
